# RoseChat

./: .env  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/models/: schemas.py
backend/app/services/: chat.py  custom_openai.py
proxy/: Cargo.toml  Dockerfile  config.toml
proxy/src/: main.rs
